--- a/procedimento1/nbproject/private/private.properties
+++ b/procedimento1/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\teova\\AppData\\Roaming\\NetBeans\\18\\build.properties
